[tool.poetry]
authors = ["Enercoop <team-data@enercoop.org>"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
description = "Tools to manipulate energy time-series and contracts, and to perform forecasts."
exclude = ["tests"]
license = "MIT"
name = "enda"
packages = [
  {include = "enda"},
]
readme = "README.md"
repository = "https://github.com/enercoop/enda"
version = "0.0.8"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/enercoop/enda/issues"

[tool.poetry.dependencies]
pandas = ">=1.0.0,<2.0.0"
python = ">=3.7.3,<3.11"

[tool.poetry.group.examples.dependencies]
bottleneck = { version = "^1.3.7", extras = ["examples"] }
h2o = { version = "^3.40.0.4", extras = ["examples"] }
joblib = { version = "^1.3.0", extras = ["examples"] }
jours-feries-france = { version = "^0.7.0", extras = ["examples"] }
matplotlib = { version = "^3.5.3", extras = ["examples"] }
numexpr = { version = "^2.8.4", extras = ["examples"] }
numpy = { version = "^1.18", extras = ["examples"] }
scikit-learn = { version = "^1.0.2", extras = ["examples"] }
seaborn = { version = "^0.12.2", extras = ["examples"] }
statsmodels = { version = "<=0.13.5", extras = ["examples"] }
unidecode = { version = "^1.3.6", extras = ["examples"] }
vacances-scolaires-france = { version = "^0.10.0", extras = ["examples"] }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.16.2"
pre-commit = "<3.3.3"
setuptools = "^68.0.0"
tox = "^4.6.3"
twine = "^4.0.2"
wheel = "^0.40.0"

[tool.poetry.extras]
examples = [
  "bottleneck",
  "h2o",
  "joblib",
  "jours-feries-france",
  "matplotlib",
  "numexpr",
  "numpy",
  "scikit-learn",
  "seaborn",
  "statsmodels",
  "unidecode",
  "vacances-scolaires-france",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core", "oldest-supported-numpy"]
