[tool.poetry]
authors = ["Enercoop <team-data@enercoop.org>"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
description = "Tools to manipulate energy time-series and contracts, and to perform forecasts."
exclude = ["tests"]
license = "MIT"
name = "enda"
packages = [
  {include = "enda"},
]
readme = "README.md"
repository = "https://github.com/enercoop/enda"
version = "0.0.8"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/enercoop/enda/issues"

[tool.poetry.dependencies]
pandas = ">=1.0.0,<2.0.0"
python = ">=3.7.3,<3.11"

[tool.poetry.group.examples.dependencies]
bottleneck = { version = "^1.3.7", extras = ["examples"] }
h2o = { version = "^3.40.0.4", extras = ["examples"] }
joblib = { version = "^1.3.0", extras = ["examples"] }
jours-feries-france = { version = "^0.7.0", extras = ["examples"] }
matplotlib = { version = "^3.5.3", extras = ["examples"] }
numexpr = { version = "^2.8.4", extras = ["examples"] }
numpy = { version = "^1.18", extras = ["examples"] }
scikit-learn = { version = "^1.0.2", extras = ["examples"] }
seaborn = { version = "^0.12.2", extras = ["examples"] }
statsmodels = { version = "<=0.13.5", extras = ["examples"] }
unidecode = { version = "^1.3.6", extras = ["examples"] }
vacances-scolaires-france = { version = "^0.10.0", extras = ["examples"] }

[tool.poetry.group.dev.dependencies]
black = { version = "^23.3.0", extras = ["dev"] }
ipykernel = { version = "^6.16.2", extras = ["dev"] }
pre-commit = { version = "<3.3.3", extras = ["dev"] }
setuptools = { version = "^68.0.0", extras = ["dev"] }
tox = { version = "^4.6.3", extras = ["dev"] }
twine = { version = "^4.0.2", extras = ["dev"] }
wheel = { version = "^0.40.0", extras = ["dev"] }
pytest = {version = "^7.4.0", extras = ["dev"]}

[tool.poetry.extras]
all = [
  "black",
  "ipykernel",
  "pre-commit",
  "setuptools",
  "tox",
  "twine",
  "wheel",
  "bottleneck",
  "h2o",
  "joblib",
  "jours-feries-france",
  "matplotlib",
  "numexpr",
  "numpy",
  "scikit-learn",
  "seaborn",
  "statsmodels",
  "unidecode",
  "vacances-scolaires-france",
]
dev = [
  "black",
  "ipykernel",
  "pre-commit",
  "setuptools",
  "tox",
  "twine",
  "wheel",
]
examples = [
  "bottleneck",
  "h2o",
  "joblib",
  "jours-feries-france",
  "matplotlib",
  "numexpr",
  "numpy",
  "scikit-learn",
  "seaborn",
  "statsmodels",
  "unidecode",
  "vacances-scolaires-france",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core", "oldest-supported-numpy"]


[[tool.poetry_bumpversion.replacements]]
files = ["enda/__init__.py"]
replace = '__version__ = "{new_version}"'
search = '__version__ = "{current_version}"'